--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -19,8 +19,8 @@ $popover-body-padding-x: $spacer * .7;
 
 .marker {
 	background: hotpink;
-	width: 12px;
-	height: 12px;
+	width: 1rem;
+	height: 1rem;
 	border: 1px solid white;
 	border-radius: 50%;
 	cursor: pointer;
