--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,5 @@
-@import '~node_modules/mapbox-gl/dist/mapbox-gl.css';
+@import '../../node_modules/mapbox-gl/dist/mapbox-gl.css';
+
 $spacer: 1rem;
 $popover-body-padding-y: $spacer * .4;
 $popover-body-padding-x: $spacer * .7;
@@ -19,8 +20,8 @@ $popover-body-padding-x: $spacer * .7;
 
 .marker {
 	background: hotpink;
-	width: 1rem;
-	height: 1rem;
+	width: 1.4rem;
+	height: 1.4rem;
 	border: 1px solid white;
 	border-radius: 50%;
 	cursor: pointer;
