rewrote aboutModal for simpler structure
added close icon to modal

--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -25,3 +25,10 @@ $desktop: 100px;
 		margin-bottom: .5rem;
 	}
 }
+
+.close-icon {
+	background: none;
+	border: 0;
+	float: right;
+	line-height: 1;
+}
