--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,7 +11,6 @@ $font-family-sans-serif: 'Poppins', sans-serif;
 @import 'about';
 
 main {
-	margin-top: 56px;
 	flex: 1;
 	display: flex;
 	align-items: stretch;
@@ -84,4 +83,10 @@ main {
 		width: 160px;
 		height: 120px;
 	}
+}
+
+.close-info {
+	float: right;
+	background: none;
+	border: 0;
 }
