polishing info panel

--- a/src/css/_aside.scss
+++ b/src/css/_aside.scss
@@ -7,12 +7,12 @@ aside {
 	background-color: white;
 	z-index: 12;
 	h5 {
-		margin-bottom: 0;
+		margin-bottom: .5rem;
 	}
 }
 
 ul.obs {
-	padding: 0;
+	padding-left: 1em;
 	margin-bottom: .5rem;
 	list-style-type: none;
 	
