--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -58,14 +58,20 @@ main {
 }
 
 .error-message {
+	background-color: white;
+	overflow-y: scroll;
 	position: absolute;
-	top: 45%;
-	left: 25%;
-	right: 25%;
+	top: 50%;
+	transform: translateY(-51%);
+	max-width: 800px;
+	margin: 0 2rem;
+	padding: 1rem 2rem;
 	z-index: 12;
 	text-align: center;
-	background-color: white;
-	padding: 10px;
+	@media screen and (min-width: 600px) {
+		left: 50%;
+		transform: translateY(-51%) translateX(-50%);
+	}
 }
 
 .loading {
