--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -29,16 +29,16 @@ main {
 	}
 }
 
-.marker {
+.mapboxgl-marker {
 	background: hotpink;
-	width: 1.35rem;
-	height: 1.35rem;
+	width: 19px;
+	height: 19px;
 	border: 1px solid white;
 	border-radius: 50%;
 	cursor: pointer;
 	@media screen and (min-width: 600px) {
-		width: 1rem;
-		height: 1rem;
+		width: 14px;
+		height: 14px;
 	}
 	&.hidden {
 		opacity: 0;
