--- a/src/css/_transitions.scss
+++ b/src/css/_transitions.scss
@@ -1,19 +1,20 @@
 .slide {
-	&-enter-active, &-leave-active {
-		transition: all .5s ease-out;
-	}
-	&-enter-from, &-leave-to {
+	transition: transform .5s ease-out;
+	&-exited {
 		transform: translateX(100%);
-		opacity: 0;
+	}
+	&-exiting {
+		transform: translateX(100%);
 	}
 }
 
 .fade {
-	&-enter-active, &-leave-active {
-		transition: opacity .5s ease-out;
+	&-in {
+		transition: opacity 500ms ease-out;
 	}
-	&-enter, &-leave-to {
+	&-out {
 		opacity: 0;
+		transition: opacity 0ms ease-out;
 	}
 }
 
