--- a/src/css/_transitions.scss
+++ b/src/css/_transitions.scss
@@ -1,5 +1,5 @@
 .slide {
-	transition: transform .5s ease-out;
+	transition: transform 500ms ease-out;
 	&-exited {
 		transform: translateX(100%);
 	}
