--- a/src/css/_aside.scss
+++ b/src/css/_aside.scss
@@ -1,4 +1,4 @@
-aside {
+.detail-tray {
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -17,7 +17,6 @@ ul.obs {
 	padding-left: 1em;
 	margin-bottom: .5rem;
 	list-style-type: none;
-	
 	li {
 		font-size: 90%;
 		margin-bottom: 0;
