made footer dark

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,7 +1,7 @@
 $spacer: 1rem;
 $font-family-sans-serif: 'Poppins', sans-serif;
 $success: SeaGreen;
-$link-color: $success; 
+$link-color: MediumSeaGreen; 
 
 // @import "variables-darkly";
 @import "~bootstrap/scss/bootstrap";
