--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -12,6 +12,7 @@ $desktop: 100px;
 	padding: 1rem;
 	z-index: 13;
 	text-align: center;
+	border-radius: 4px;
 	opacity: 0;
 	visibility: hidden;
 	transition: all 1000ms ease-out;
