--- a/src/css/_aside.scss
+++ b/src/css/_aside.scss
@@ -1,22 +1,30 @@
-.detail-tray {
+.aside {
 	position: absolute;
 	right: 0;
 	top: 0;
 	bottom: 0;
-	width: 300px;
-	padding: 1em;
+	transform: translateX(300px);
 	overflow-y: scroll;
 	background-color: white;
 	z-index: 12;
+	transition: transform .33s ease-in-out;
+	&.active {
+		width: 300px;
+		transform: translateX(0);
+	}
 	h5 {
-		margin-bottom: .5rem;
+		margin: 1rem 1rem .5rem;
 	}
 }
-
+.close-info {
+	margin: 1rem .5rem 0 0;
+}
+.obs-wrapper {
+	margin: 0 1rem;
+}
 ul.obs {
-	padding-left: 1em;
+	padding-left: 1.5em;
 	margin-bottom: .5rem;
-	list-style-type: none;
 	li {
 		font-size: 90%;
 		margin-bottom: 0;
